# superfinance-mcp

./: .env.example  .gitignore  AUTH_IMPLEMENTATION.md  Dockerfile  OPTIONS_SYNC_README.md  PHASE2_COMPLETION_REPORT.md  PORTFOLIO_REMOVAL_SUMMARY.md  PRD.md  README.md  SNAPTRADE_SYNC_FIXES.md  SQLITE_MIGRATION_SUMMARY.md  TASK_COMPLETE.md  TASK_COMPLETION_REPORT.md  VERIFICATION_REPORT.md  WIDGET_DATA_IMPLEMENTATION.md  auth.py  cache.py  db.py  fly.toml  oauth.py  option_flow_sync.py  pyproject.toml  refresh.py  server.py  sync-secrets.sh  users.py
api/: __init__.py
data/: classifications.json
db/: __init__.py  database.py  queries.py  schema.sql
helpers/: __init__.py  chart_templates.py  classification.py  dashboard_templates.py  portfolio.py  pricing.py  transaction_types.py  user_context.py  widget_data.py
scripts/: portfolio_cli.py  sync_option_flow_to_fly.py
services/: __init__.py  analytics.py  holdings_service.py  portfolio_service.py  portfolio_service_old.py  reconciliation.py  snaptrade_service.py  universe.py  yahoo_finance_service.py
static/: index.html  login.html
tests/: .test-evidence.json  __init__.py  test_analytics.py  test_dashboards.py  test_database.py  test_integration.py  test_momentum_tools.py  test_oauth.py  test_option_flow.py  test_option_flow_sync.py  test_portfolio_analytics.py  test_portfolio_service.py  test_queries.py  test_snaptrade.py  test_snaptrade_sync.py  test_themes.py  test_transaction_types.py  test_watchlist.py  test_widget_data.py  test_x_accounts.py
tools/: __init__.py  __init___v2.py  accounts.py  analysis.py  (+34 more)
(+8 files in other folders)
