[project]
name = "superfinance-mcp"
version = "0.2.0"
description = "SuperFinance MCP server - Yahoo Finance data and SnapTrade brokerage integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "yfinance>=0.2.62",
    "uvicorn>=0.30.0",
    "snaptrade-python-sdk>=11.0.154",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "black>=24.2.0",
    "isort>=5.13.2",
    "pytest>=8.0.0",
    "pytest-order>=1.2.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
